# codejam-2020

./: CMakeLists.txt
qual/: p1-vestigium.cpp  p2-nesting-depth.cpp  p3-parenting-partnering.cpp  p4-esab-atad-XRUNNER.py  p4-esab-atad.cpp  p5-indicium.cpp
