cmake_minimum_required(VERSION 3.15)
project(codejam)

set(CMAKE_CXX_STANDARD 14)

add_executable(p1-vestigium qual/p1-vestigium.cpp)
add_executable(p2-nesting-depth qual/p2-nesting-depth.cpp)
add_executable(p3-parenting-partnering qual/p3-parenting-partnering.cpp)
add_executable(p4-esab-atad qual/p4-esab-atad.cpp)
add_executable(p5-indicium qual/p5-indicium.cpp)